zebra-rpc/src/methods/tests/snapshots/get_address_balance@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 204
expression: address_balance
---
{
  "balance": 10000000000000000
}
