zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 252
expression: transactions
---
[
  "e417050fb7fb1415497fa394eba97dc41b49688afc565c49bedca2abcbae912a"
]
