zebra-rpc/src/methods/tests/snapshots/get_block@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 214
expression: block
---
"[BlockData]"
