zebra-rpc/src/methods/tests/snapshots/get_block_verbose@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 227
expression: block
---
{
  "tx": [
    "e417050fb7fb1415497fa394eba97dc41b49688afc565c49bedca2abcbae912a"
  ]
}
