zebra-rpc/src/methods/tests/snapshots/get_info@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 177
expression: info
---
{
  "build": "vRPC test",
  "subversion": "[SubVersion]"
}
