zebra-rpc/src/methods/tests/snapshots/get_raw_mempool@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 237
expression: raw_mempool
---
[]
