zebra-rpc/src/methods/tests/snapshots/get_raw_transaction@kmd_mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 247
expression: raw_transaction
---
"01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff010000c16ff286230023210260b255850cfd4a20f5f97eafbbd05df9b56203f7d480744dd1c8aec8d17cdc01ac00000000"
